# rustsec

./: .gitignore  .gitmodules  .travis.yml  .whitesource  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  OSV-TODO.md  README.md  appveyor.yml  audit.toml.example  snapcraft.yaml
admin/: CHANGELOG.md  Cargo.toml  README.md  askama.toml
admin/src/: application.rs  assigner.rs  commands.rs  error.rs  ghsa.rs  lib.rs  linter.rs  list_versions.rs  lock.rs  osv_export.rs  prelude.rs  synchronizer.rs  web.rs
admin/src/commands/: assign_id.rs  ghsa.rs  lint.rs  list_affected_versions.rs  osv.rs  sync.rs  version.rs  web.rs
admin/src/web/: mod.rs
admin/src/web/static/css/: basic.css  highlight.css  index.css
admin/src/web/static/js/: search.js
admin/src/web/templates/: advisories-sublist.html  advisories.html  advisory-content.html  advisory-list-entry.html  advisory.html  base.html  index.html  menu.html  package-advisories.html  search.html  static.html  sublist-index.html
admin/tests/: acceptance.rs
cargo-audit/: CHANGELOG.md  Cargo.toml  README.md  audit.toml.example
cargo-audit/src/: application.rs  auditor.rs  binary_deps.rs  binary_format.rs  binary_scanning.rs  binary_type_filter.rs  cli_config.rs  commands.rs  config.rs  error.rs  lib.rs  lockfile.rs  package_id.rs  prelude.rs  presenter.rs  sarif.rs
cargo-audit/src/commands/: audit.rs
cargo-audit/src/commands/audit/: binary_scanning.rs  fix.rs
cargo-audit/tests/: acceptance.rs  audit.toml.legacy  binary_scanning.rs  config.rs
cargo-audit/tests/support/base64_vuln/: Cargo.toml
cargo-audit/tests/support/binaries/: binary-with-audit-info  binary-with-vuln  binary-with-vuln-panic  binary-without-audit-info  regenerate-binaries.sh
cargo-audit/tests/support/binaries/hello-world/: Cargo.toml
cargo-audit/tests/support/binaries/vulnerable-binary/: Cargo.toml
cargo-audit/tests/support/binaries/vulnerable-binary-with-affected-functions/: Cargo.toml
cargo-audit/tests/support/binaries/vulnerable-binary-with-panic-message/: Cargo.toml
cargo-audit/tests/support/empty/: README
cargo-audit/tests/support/json/: audit.json
cargo-audit/tests/support/multi_vulns/: Cargo.toml
cargo-audit/tests/support/no_vulns/: Cargo.toml
cargo-audit/tests/support/notice/: Cargo.toml
cargo-audit/tests/support/unaffected-newer/: Cargo.toml
cargo-audit/tests/support/unmaintained/: Cargo.toml
cargo-audit/tests/support/unsound/: Cargo.toml
cargo-audit/tests/support/yanked/: Cargo.toml
cargo-lock/: CHANGELOG.md  Cargo.toml  README.md
cargo-lock/src/: dependency.rs  error.rs  lib.rs  lockfile.rs  main.rs  metadata.rs  package.rs
cargo-lock/src/dependency/: tree.rs
cargo-lock/src/lockfile/: encoding.rs  version.rs
cargo-lock/src/package/: checksum.rs  name.rs  source.rs
cargo-lock/tests/: lockfile.rs
cargo-lock/tests/examples/: Cargo.lock.git-ref  Cargo.lock.unused-patch  Cargo.lock.v4
cargo-lock/tests/examples/source_disambiguation/: Cargo.lock.two_versions_same_registry
cli/: Cargo.toml  README.md
cli/src/: application.rs  commands.rs  config.rs  lib.rs
cli/src/commands/: check.rs  version.rs  web.rs
cli/tests/: acceptance.rs
cvss/: CHANGELOG.md  Cargo.toml  README.md
cvss/src/: cvss.rs  error.rs  lib.rs  metric.rs  severity.rs  v2.rs  v3.rs  v4.rs
cvss/src/v2/: base.rs  environmental.rs  metric.rs  score.rs  temporal.rs  vector.rs
cvss/src/v2/base/: a.rs  ac.rs  au.rs  av.rs  c.rs  i.rs
cvss/src/v2/environmental/: ar.rs  cdp.rs  cr.rs  ir.rs  td.rs
cvss/src/v2/metric/: base.rs  environmental.rs  temporal.rs
cvss/src/v2/metric/base/: a.rs  ac.rs  au.rs  av.rs  c.rs  i.rs
cvss/src/v2/metric/environmental/: ar.rs  cdp.rs  cr.rs  ir.rs  td.rs
cvss/src/v2/metric/temporal/: e.rs  rc.rs  rl.rs
cvss/src/v2/temporal/: e.rs  rc.rs  rl.rs
cvss/src/v3/: base.rs  cvss.rs  environmental.rs  metric.rs  score.rs  temporal.rs  vector.rs
cvss/src/v3/base/: a.rs  ac.rs  av.rs  c.rs  i.rs  pr.rs  s.rs  ui.rs
cvss/src/v3/environmental/: ar.rs  cr.rs  ir.rs  ma.rs  mac.rs  mav.rs  mc.rs  mi.rs  mpr.rs  ms.rs  mui.rs
cvss/src/v3/metric/: base.rs  environmental.rs  temporal.rs
cvss/src/v3/metric/base/: a.rs  ac.rs  av.rs  c.rs  i.rs  pr.rs  s.rs  ui.rs
cvss/src/v3/metric/environmental/: ar.rs  cr.rs  ir.rs  ma.rs  mac.rs  mav.rs  mc.rs  mi.rs  mpr.rs  ms.rs  mui.rs
cvss/src/v3/metric/temporal/: e.rs  rc.rs  rl.rs
cvss/src/v3/temporal/: e.rs  rc.rs  rl.rs
cvss/src/v4/: metric.rs  score.rs  scoring.rs  vector.rs
cvss/src/v4/metric/: base.rs  environmental.rs  threat.rs
cvss/src/v4/metric/base/: ac.rs  at.rs  av.rs  pr.rs  sa.rs  sc.rs  si.rs  ui.rs  va.rs  vc.rs  vi.rs
cvss/src/v4/metric/environmental/: ar.rs  cr.rs  ir.rs  mac.rs  mat.rs  mav.rs  mpr.rs  msa.rs  (+6 more)
cvss/src/v4/scoring/: max_severity.rs
cvss/tests/: base.rs  redhat-v2.rs  redhat-v3.rs  uncovered-v4.rs
platforms-table-gen/: Cargo.toml  README.md
quitters/: Cargo.toml
quitters/examples/: from_file.rs
quitters/src/: lib.rs
rustsec/: CHANGELOG.md  Cargo.toml  README.md
rustsec/src/: advisory.rs  binary_deps.rs  binary_format.rs  binary_type_filter.rs  cached_index.rs  collection.rs  database.rs  error.rs  fetch.rs  fixer.rs  lib.rs  osv.rs  registry.rs  report.rs  target_info.rs  vulnerability.rs  warning.rs
rustsec/src/advisory/: affected.rs  category.rs  date.rs  id.rs  informational.rs  keyword.rs  license.rs  linter.rs  metadata.rs  version_ranges.rs  versions.rs
rustsec/src/binary_scanning/: binary_deps.rs  binary_format.rs  binary_type_filter.rs
rustsec/src/database/: entries.rs  index.rs  query.rs  scope.rs
rustsec/src/osv/: advisory.rs  mod.rs  osv_advisory.rs  osv_range.rs  range_conversion.rs  ranges_for_advisory.rs  unaffected_range.rs
rustsec/src/repository/: git.rs  signature.rs
rustsec/src/repository/git/: authentication.rs  commit.rs  commit_hash.rs  gitpath.rs  modification_time.rs  repository.rs
rustsec/tests/: advisories.rs  database.rs  integration.rs  linter.rs  query.rs
rustsec/tests/support/: example_advisory_v4_from_ghsa.md
(+172 files in other folders)
