[workspace]
resolver = "2"
members = [
    "admin",
    "cargo-audit",
    "cargo-lock",
    "cvss",
    "platforms",
    "quitters",
    "rustsec"
]

[patch.crates-io]
cargo-lock = { path = "./cargo-lock" }
cvss = { path = "./cvss" }
platforms = { path = "./platforms" }
quitters = { path = "./quitters" }
rustsec = { path = "./rustsec" }
