[workspace]
resolver = "2"
members = [
    "admin",
    "cargo-audit",
    "cargo-lock",
    "cvss",
    "platforms",
    "platforms-data-gen",
    "platforms-table-gen",
    "quitters",
    "rustsec"
]

[workspace.dependencies]
abscissa_core = "0.8"
askama = "0.14"
atom_syndication = "0.12"
auditable-info = "0.10"
auditable-serde = "0.9"
binfarce = "0.2"
cargo-lock = { version = "11", path = "./cargo-lock" }
chrono = { version = "0.4", default-features = false }
clap = "4"
comrak = { version = "0.46", default-features = false }
cvss = { version = "2.2", path = "./cvss" }
display-error-chain = "0.2.0"
fs-err = "3"
# NOTE: Keep in sync with `gix` used by `tame-index`.
gix = { version = "0.74", default-features = false }
gumdrop = "0.8"
home = "0.5"
once_cell = "1.15.0"
petgraph = "0.8.2"
platforms = { version = "3", path = "./platforms" }
quitters = { version = "0.1.0", path = "./quitters" }
regex = { version = "1.10.6", default-features = false }
rust-embed = "8.5.0"
rustsec = { version = "0.31", path = "./rustsec" }
semver = "1.0.23"
serde = "1"
serde_json = "1"
tame-index = { version = "0.24", default-features = false }
tempfile = "3"
termcolor = "1"
thiserror = "2"
time = { version = "0.3", default-features = false }
toml = "0.9"
toml_edit = "0.23"
url = "2"
xml = "1"

[patch.crates-io]
cargo-lock = { path = "./cargo-lock" }
cvss = { path = "./cvss" }
platforms = { path = "./platforms" }
quitters = { path = "./quitters" }
rustsec = { path = "./rustsec" }

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
