[package]
name        = "rustsec-admin"
description = "Admin utility for maintaining the RustSec Advisory Database"
version     = "0.8.9"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0 OR MIT"
homepage    = "https://rustsec.org"
repository  = "https://github.com/RustSec/rustsec/tree/main/admin"
readme      = "README.md"
edition     = "2021"

[features]
default = ["gix?/max-performance-safe"]

[dependencies]
abscissa_core = "0.7"
askama = "0.12"
atom_syndication = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"]  }
clap = "4"
comrak = { version = "0.21", default-features = false }
tame-index = { version = "0.9.3", features = ["git"] }
# NOTE: Keep in sync with `gix` used by `tame-index`.
gix = { version = "0.58", default-features = false, optional = true }
rust-embed = "8.3.0"
rustsec = { version = "0.28.6", features = ["osv-export"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
termcolor = "1"
thiserror = "1"
toml = "0.7"
toml_edit = "0.22.6"
xml-rs = "0.8"

[dev-dependencies]
abscissa_core = { version = "0.7", features = ["testing"] }
once_cell = "1.5"

