[package]
name        = "rustsec-admin"
description = "Admin utility for maintaining the RustSec Advisory Database"
version     = "0.8.10"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0 OR MIT"
homepage    = "https://rustsec.org"
repository  = "https://github.com/rustsec/rustsec"
readme      = "README.md"
edition     = "2024"

[features]
default = ["gix?/max-performance-safe"]

[dependencies]
abscissa_core = { workspace = true }
askama = { workspace = true }
atom_syndication = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
clap = { workspace = true }
comrak = { workspace = true }
cvss = { workspace = true }
fs-err = { workspace = true }
tame-index = { workspace = true, features = ["sparse"] }
gix = { workspace = true, optional = true }
rust-embed = { workspace = true }
rustsec = { workspace = true, features = ["osv-export"] }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
termcolor = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
xml = { workspace = true }

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell = { workspace = true }
