[package]
name         = "cargo-audit"
description  = "Audit Cargo.lock for crates with security vulnerabilities"
version      = "0.17.2"
authors      = ["Tony Arcieri <bascule@gmail.com>"]
license      = "Apache-2.0 OR MIT"
homepage     = "https://rustsec.org"
repository   = "https://github.com/RustSec/rustsec/tree/main/cargo-audit"
readme       = "README.md"
categories   = ["development-tools::cargo-plugins"]
keywords     = ["cargo-subcommand", "security", "audit", "vulnerability"]
edition      = "2021"
rust-version = "1.57"
exclude      = ["tests/"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
abscissa_core = "0.6"
clap = "3"
home = "0.5"
rustsec = { version = "0.26", features = ["dependency-tree"], path = "../rustsec" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
thiserror = "1"
# for scanning binary files
auditable-info = { version = "0.5.0", optional = true }
cargo-lock = { version = "8.0.2", optional = true } 
auditable-serde = { version = "0.5.2",  optional = true, features = ["toml"] }

[dev-dependencies]
once_cell = "1.5"
tempfile = "3"
toml = "0.5"

[dev-dependencies.abscissa_core]
version = "0.6"
features = ["testing"]

[features]
default = []
fix = ["rustsec/fix"]
vendored-libgit2 = ["rustsec/vendored-libgit2"]
vendored-openssl = ["rustsec/vendored-openssl"]
binary-scanning = ["auditable-info", "cargo-lock", "auditable-serde"]
