[package]
name         = "cargo-lock"
description  = "Self-contained Cargo.lock parser with optional dependency graph analysis"
version      = "9.0.0"
authors      = ["Tony Arcieri <bascule@gmail.com>"]
license      = "Apache-2.0 OR MIT"
readme       = "README.md"
homepage     = "https://rustsec.org"
repository   = "https://github.com/RustSec/rustsec/tree/main/cargo-lock"
categories   = ["parser-implementations"]
keywords     = ["cargo", "dependency", "lock", "lockfile"]
edition      = "2021"
rust-version = "1.70"

[[bin]]
name = "cargo-lock"
required-features = ["cli"]

[dependencies]
gumdrop = { version = "0.8", optional = true }
petgraph = { version = "0.6", optional = true }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
toml = "0.7"
url = "2"

[features]
cli = ["gumdrop", "dependency-tree"]
dependency-tree = ["petgraph"]

[package.metadata.docs.rs]
features = ["dependency-tree"]
rustdoc-args = ["--cfg", "docsrs"]
