[package]
name        = "platforms-table-gen-v2"
description = "Generates a Markdown table of known Rust platforms (for README.md)"
version     = "0.0.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
publish     = false
edition     = "2018"

[dependencies]
platforms = { path = "../platforms" }
