[package]
name = "quitters"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sergey \"Shnatsel\" Davidoff"]
description = "List dependencies of a Rust binary by parsing panic messages"
repository = "https://github.com/rustsec/rustsec"
categories = ["parsing"]

[dependencies]
once_cell = { workspace = true }
# we don't need unicode support in regex, so drop it to reduce binary size and attack surface
regex = { workspace = true, features = ["std", "perf"] }
semver = { workspace = true }
