[package]
name         = "rustsec"
description  = "Client library for the RustSec security advisory database"
version      = "0.26.5"
authors      = ["Tony Arcieri <bascule@gmail.com>"]
license      = "Apache-2.0 OR MIT"
homepage     = "https://rustsec.org"
repository   = "https://github.com/RustSec/rustsec/tree/main/rustsec"
readme       = "README.md"
categories   = ["api-bindings", "development-tools"]
keywords     = ["audit", "rustsec", "security", "advisory", "vulnerability"]
edition      = "2021"
rust-version = "1.60"

[dependencies]
cargo-lock = { version = "8", default-features = false }
cvss = { version = "2", features = ["serde"], path = "../cvss" }
fs-err = "2.9"
platforms = { version = "3", features = ["serde"], path = "../platforms" }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
toml = "0.7"
url = { version = "2", features = ["serde"] }

# optional dependencies
cargo-edit = { version = "0.9", package = "cargo-edit-9", optional = true, default-features = false,  features = ["upgrade"] }
crates-index = { version = "0.19", optional = true }
git2 = { version = "0.16.1", optional = true }
home = { version = "0.5", optional = true }
humantime = { version = "2", optional = true }
humantime-serde = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
once_cell = "1"

[features]
default = ["git"]
fix = ["dep:cargo-edit"]
git = ["dep:crates-index", "dep:git2", "dep:home", "dep:humantime", "dep:humantime-serde"]
dependency-tree = ["cargo-lock/dependency-tree"]
vendored-libgit2 = ["dep:git2", "git2?/vendored-libgit2"]
vendored-openssl = ["dep:git2", "git2?/vendored-openssl"]
osv-export = ["git"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
