[package]
name         = "rustsec"
description  = "Client library for the RustSec security advisory database"
version      = "0.28.4"
authors      = ["Tony Arcieri <bascule@gmail.com>"]
license      = "Apache-2.0 OR MIT"
homepage     = "https://rustsec.org"
repository   = "https://github.com/RustSec/rustsec/tree/main/rustsec"
readme       = "README.md"
categories   = ["api-bindings", "development-tools"]
keywords     = ["audit", "rustsec", "security", "advisory", "vulnerability"]
edition      = "2021"
rust-version = "1.70.0"

[dependencies]
cargo-lock = { version = "9", default-features = false }
cvss = { version = "2", features = ["serde"] }
fs-err = "2.11"
platforms = { version = "3", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
toml = "0.7"
url = { version = "2", features = ["serde"] }

# optional dependencies
cargo-edit = { version = "0.9", package = "cargo-edit-9", optional = true, default-features = false, features = [
    "upgrade",
] }
tame-index = { version = "0.9.0", default-features = false, features = ["git", "sparse", "native-certs"], optional = true }
home = { version = "0.5", optional = true }
time = { version = "0.3", default-features = false, features = ["formatting", "serde"], optional = true }
gix = { version = "0.56", default-features = false, features = ["worktree-mutation", "revision", "max-performance-safe"], optional = true}

[dev-dependencies]
tempfile = "3"
once_cell = "1"
serde_json = "1"

[features]
default = ["git"]
fix = ["dep:cargo-edit"]
git = [
    "dep:tame-index",
    "dep:home",
    "dep:time",
    "dep:gix",
]
dependency-tree = ["cargo-lock/dependency-tree"]
osv-export = ["git"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
