[package]
name         = "rustsec"
description  = "Client library for the RustSec security advisory database"
version      = "0.30.1"
authors      = ["Tony Arcieri <bascule@gmail.com>"]
license      = "Apache-2.0 OR MIT"
homepage     = "https://rustsec.org"
repository   = "https://github.com/rustsec/rustsec"
readme       = "README.md"
categories   = ["api-bindings", "development-tools"]
keywords     = ["audit", "rustsec", "security", "advisory", "vulnerability"]
edition      = "2021"
rust-version = "1.73"

[dependencies]
cargo-lock = { workspace = true }
cvss = { workspace = true, features = ["serde"] }
fs-err = { workspace = true }
platforms = { workspace = true, features = ["serde"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }

# for scanning binary files
auditable-info = { workspace = true, features = ["wasm"], optional = true }
auditable-serde = { workspace = true, optional = true }
quitters = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
binfarce = { workspace = true, optional = true }

# optional dependencies
tame-index = { workspace = true, features = ["git", "sparse", "native-certs"], optional = true }
home = { workspace = true, optional = true }
time = { workspace = true, features = ["formatting", "serde", "parsing"], optional = true }
gix = { workspace = true, features = ["worktree-mutation", "revision", "max-performance-safe"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["git"]
git = [
    "dep:tame-index",
    "dep:home",
    "dep:time",
    "dep:gix",
]
dependency-tree = ["cargo-lock/dependency-tree"]
osv-export = ["git"]
binary-scanning = ["dep:auditable-info", "dep:auditable-serde", "dep:binfarce", "dep:quitters", "dep:once_cell"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
