[package]
name = "yanked"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# depend on the yanked `rustsec-example-crate` crate version
rustsec-example-crate = "=0.0.0"
# if you need to regenerate the lockfile, you can follow the steps outlined in
# https://github.com/rust-lang/cargo/issues/4225 to build a patched Cargo

[workspace]
